test: rename dataset/ to samples/

--- a/cam.test.html
+++ b/cam.test.html
@@ -48,11 +48,11 @@
     <div class="video-container">
       <div class="video-item">
         <div class="item-title">Cat Image</div>
-        <img id="catImage" src="dataset/cat.jpg" />
+        <img id="catImage" src="samples/cat.jpg" />
       </div>
       <div class="video-item">
         <div class="item-title">Dog Image</div>
-        <img id="dogImage" src="dataset/dog.jpg" />
+        <img id="dogImage" src="samples/dog.jpg" />
       </div>
       <div class="video-item">
         <div class="item-title">Video</div>
