--- a/cam.test.html
+++ b/cam.test.html
@@ -56,7 +56,7 @@
       </div>
       <div class="video-item">
         <div class="item-title">Video</div>
-        <video id="video" autoplay playsinline></video>
+        <video id="video" autoplay playsinline loop></video>
       </div>
       <div class="video-item">
         <div class="item-title">Input</div>
