test: show logits and probs in UI

--- a/cam.test.html
+++ b/cam.test.html
@@ -32,6 +32,10 @@
         background-color: #000;
         color: #fff;
       }
+      #outputProbs {
+        white-space: pre-wrap;
+        font-family: monospace, monospace;
+      }
     </style>
   </head>
   <body>
@@ -67,6 +71,7 @@
         <canvas id="camCanvas"></canvas>
       </div>
     </div>
+    <div id="outputProbs"></div>
     <script src="cam.bundle.js"></script>
   </body>
 </html>
