exp: spread the gradient peak exp: extract pixel based on gradient

--- a/cam.test.html
+++ b/cam.test.html
@@ -49,6 +49,12 @@
       <button class="class-item">dog</button>
       <button class="class-item">others</button>
     </div>
+    <div>
+      <label>
+        Pooling Radius:
+        <input type="number" id="poolingRadius" value="1" />
+      </label>
+    </div>
     <div class="video-container">
       <div class="video-item">
         <div class="item-title">Cat Image</div>
@@ -69,6 +75,10 @@
       <div class="video-item">
         <div class="item-title">CAM</div>
         <canvas id="camCanvas"></canvas>
+      </div>
+      <div class="video-item">
+        <div class="item-title">Extracted</div>
+        <canvas id="extractedCanvas"></canvas>
       </div>
     </div>
     <div id="outputProbs"></div>
