test: support custome image as input

--- a/cam.test.html
+++ b/cam.test.html
@@ -42,6 +42,7 @@
     <div>
       <button id="startCameraButton">start camera</button>
       <button id="startVideoButton">start video</button>
+      <button id="pickImageButton">pick image</button>
     </div>
     <div class="class-list">
       <button class="class-item">both</button>
