ui: highlight node and connection lines with hover or click-to-lock

--- a/chart.html
+++ b/chart.html
@@ -34,6 +34,13 @@
         inset: 0;
         pointer-events: none;
       }
+      .node.active {
+        outline: 3px solid red;
+      }
+      line.active {
+        stroke: red;
+        stroke-width: 3;
+      }
     </style>
   </head>
   <body>
