--- a/chart.html
+++ b/chart.html
@@ -45,7 +45,7 @@
   </head>
   <body>
     <div id="chart">
-      <div class="chart-name">MobileNetV3</div>
+      <div class="chart-name">Loading Model...</div>
       <div class="chart-nodes">
         <div class="node">
           <div class="node-name">Output</div>
